	PR c++/16405 	* gimplify.c (gimplify_modify_expr_rhs): Handle 	INDIRECT_REF/ADDR_EXPR combinations.

PR c++/16405
	* g++.dg/opt/temp1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92539 138bc75d-0d04-0410-961f-82ee72b054a4